# iden3math

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_whl.py  requirements.txt
.github/workflows/: cmake-multi-platform.yml
include/iden3math/: macro.h  serialize.h
include/iden3math/ec/: point.h  twisted_edwards.h
src/cxx/: bigint.cxx  fp1.cxx  random.cxx
src/cxx/ec/: babyjub.cxx  twisted_edwards.cxx
src/js/: index.d.ts  index.mjs  package.json.in
src/pyc/ec/: ec_py.h  twisted_edwards_py.cxx
src/pyi/ec/: __init__.pyi  twisted_edwards.pyi
src/wasm/: iden3math_wasm.cxx
test/cxx/: helper.h  random_test.cxx
test/cxx/ec/: twisted_edwards_test.cxx
test/js/: babyjub.fixtures.mjs  bitvec.test.mjs  common.mjs  ec_babyjub.test.mjs  ec_twisted_edwards.test.mjs  fp1.test.mjs  hash_blake.test.mjs  hash_keccak.test.mjs  hash_mimc.test.mjs  hash_mimc.worker.mjs  hash_pedersen.test.mjs  random.test.mjs
test/py/: test_ec_twisted_edwards.py  test_random.py
